# itm-data-ingestion

./: .env.example  .gitignore  README.md  pyproject.toml
src/itm_data_ingestion/: __init__.py
src/itm_data_ingestion/config/: __init__.py  models.py
src/itm_data_ingestion/entities/: __init__.py  transformers.py
src/itm_data_ingestion/infrastructure/: __init__.py  azure_blob_reader.py  delta_writer.py  entrypoint.py  settings.py
src/itm_data_ingestion/utils/: __init__.py  local_spark_session.py  loggers.py
tests/: __init__.py
tests/entities/: __init__.py  test_transformers.py
